// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exercise-scores compoment should render a recommendation with display name as test and value as 0 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "DisplayName": "test",
        "InternalName": "",
        "Score": 0,
        "Value": {
          "deffuse": 0,
          "feeling_angry": 0,
          "feeling_stressed": 0,
          "five_seven_mins": 0,
          "mood_boost": 0,
          "mood_value": 0,
          "self_compassion": 0,
          "seven_ten_mins": 0,
          "three_five_mins": 0,
          "zoom_out": 0,
        },
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  style={
    {
      "marginTop": 10,
    }
  }
  viewabilityConfigCallbackPairs={[]}
  waitFor={
    [
      {
        "current": null,
      },
      {
        "current": null,
      },
    ]
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "marginBottom": 5,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#300096",
              "fontFamily": "Rubik",
              "fontSize": 15,
              "lineHeight": 26,
            }
          }
        >
          Name: 
          test
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#300096",
              "fontFamily": "Rubik",
              "fontSize": 15,
              "lineHeight": 26,
            }
          }
        >
          Score: 
          0
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`exercise-scores compoment should render an empty list of recommendations 1`] = `
<RCTScrollView
  collapsable={false}
  data={[]}
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  style={
    {
      "marginTop": 10,
    }
  }
  viewabilityConfigCallbackPairs={[]}
  waitFor={
    [
      {
        "current": null,
      },
      {
        "current": null,
      },
    ]
  }
>
  <View />
</RCTScrollView>
`;
